2.9.4
-----
1. Allow 'lmsbrowse' custom actions from now-playing.

2.9.3
-----
1. Only show updates available if settings are unlocked.
2. Translation updates.
3. Fix missing add/play buttons for Bliss mixes.
4. Add 'All Songs' entry to genres and years.
5. Add 'Years' under genre browsing.
6. Allow to pin 'wavin:' favourites to home screen.
7. Change 'Track' to 'Title' and 'Track#' to 'Track' in advanced search.
8. Fix add/play all discs when Material set to always collapse.
9. Treat as HTML if title includes '<br/>'

2.9.2
-----
1. Map JPG icons as well as PNG icons.
2. Add icon mapping for Accuradio.
3. Fix splitter moving on mobile browsers.
4. When changing colour theme force queue update 1/2 second later, so that
   indicator picks up correct colour.

2.9.1
-----
1. Translation updates.
2. Remove trailing percentage sign from voltage display.
3. Add file selector to more items.
4. Add restart icon to main menu icon if LMS indicates server needs restart.
5. Only scroll information dialog if plugin status received no more than 1.5
   seconds after opening.
6. Try not to duplicate sample rate in tech info.
7. When checking what 'other' sources to add for search, use case-insensitive
   name check.

2.9.0
-----
 1. Fix swipe to change info view tab.
 2. Another attempt to work-around long-press on 'Manage players' entry causing
    an entry in sync dialog to get checked.
 3. Handle "radioparadise:" URLs when showing track source.
 4. Don't show 'Internet/Other' beside tech info.
 5. Use space to separate tech info.
 6. Better shuffle albums icon.
 7. Add swipe left/right on cover to change track.
 8. Re-factor language handling.
 9. Allow other LMS plugins to register Javascript and dialogs.
10. Optionally collapse discs of multi-disc albums - either always collapse, or
    when 200 or more tracks. Setting is controlled server-side.
11. Fix browser-context menu for text fields in browse list.
12. Add player voltage to 'Information' dialog.